--- a/assignments/hw2.qmd
+++ b/assignments/hw2.qmd
@@ -6,7 +6,7 @@ toc: false
 
 ## Due Date
 
-This assignment is due by 11:59pm Pacific Time on Friday, October 10th, 2025.
+This assignment is due by 11:59pm Pacific Time on ~~Friday, October 10th~~ **Wednesday, October 15th**, 2025.
 
 # Learning Goals
 
