--- a/schedule.qmd
+++ b/schedule.qmd
@@ -12,8 +12,8 @@ title: "Schedule"
 | 6 | 10/3 | Text Mining & Sentiment Analysis	 | [Slides](slides/week06.qmd) | [Lab](labs/lab6.qmd) |  |
 |   | 10/10 | NO CLASS - FALL RECESS	 |  |  | [Midterm](assignments/midterm.qmd) |
 | 7 | 10/17 | Scraping, APIs, and Regular Expressions	 | [Slides](slides/week07.qmd) | [Lab](labs/lab7.qmd) |  |
-| 8 | 10/24 | Efficiency and High Performance Computing | [Slides](slides/week08.qmd) | [Lab](labs/lab8.qmd) | HW3 |
-| 9 | 10/31 | SQL and Managing Big Data	 | [Slides](slides/week09.qmd) | Lab |  |
+| 8 | 10/24 | Efficiency and High Performance Computing | [Slides](slides/week08.qmd) | [Lab](labs/lab8.qmd) | [HW3](assignments/hw3.qmd) |
+| 9 | 10/31 | SQL and Managing Big Data	 | [Slides](slides/week09.qmd) | [Lab](labs/lab9.qmd) |  |
 | 10 | 11/7 | Interactive Visualization & Effective Data Communication I	 | Slides | Lab | HW4 |
 | 11 | 11/14 | Interactive Visualization & Effective Data Communication II	 | Slides | Lab |  |
 | 12 | 11/21 | Nonparametric Statistics	 | Slides |  | Final |
