--- a/labs/lab1.qmd
+++ b/labs/lab1.qmd
@@ -51,7 +51,7 @@ We recommend using RStudio as your IDE if you don't already have it installed. Y
 
 RStudio is comprised of four panes.
 
-![](rstudio-anatomy.png)
+![](img/rstudio-anatomy.png)
 
 - On the bottom left is the Console, this is where you can write code that will be evaluated. Try typing `2 + 2` here and hit enter, what do you get?
 
