--- a/labs/lab9.qmd
+++ b/labs/lab9.qmd
@@ -1,138 +1,195 @@
 ---
-title: "Lab 9 - HPC"
+title: "Lab 9 - SQL"
 link-citations: true
 toc: false
 ---
 
-# Learning goals
+# Setup
 
-In this lab, you are expected to learn/put in practice the following skills:
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(eval = FALSE)
+library(RSQLite)
+library(DBI)
 
-- Evaluate whether a problem can be parallelized or not.
-- Practice with the `parallel` package.
-
-
-# Vectorization
-
-The following functions can be written to be more efficient without parallelizing. Write a faster version of each function and show that (1) the outputs are the same as the slow version, and (2) your version is faster.
-
-## Question 1
-
-This function generates an `n`$\times$`k` dataset with all its entries drawn from a Poission distribution with mean `lambda`.
-
-```{r p2-fun1, eval = FALSE}
-fun1 <- function(n = 100, k = 4, lambda = 4) {
-  x <- NULL
-  for (i in 1:n){
-    x <- rbind(x, rpois(k, lambda))    
-  }
-  return(x)
-}
-
-fun1alt <- function(n = 100, k = 4, lambda = 4) {
-  # YOUR CODE HERE
-}
-```
-
-Show that `fun1alt` generates a matrix with the same dimensions as `fun1` and that the values inside the two matrices follow similar distributions. Then check the speed of the two functions with the following code:
-
-```{r check, eval=FALSE}
-# Benchmarking
-microbenchmark::microbenchmark(
-  fun1(),
-  fun1alt()
-)
-```
-
-## Question 2
-
-This function, `fun2`, finds the maximum value of each column of a matrix. Same as above, write a faster version of this function, called `fun2alt`.
-
-```{r p2-fun2, eval = FALSE}
-# make a synthetic dataset for testing (10 x 1,000 matrix)
-set.seed(1234)
-x <- matrix(rnorm(1e4), nrow=10)
-
-# Find each column's max value
-fun2 <- function(x) {
-  apply(x, 2, max)
-}
-
-fun2alt <- function(x) {
-  # YOUR CODE HERE
-}
-```
-
-Show that both functions return the same output for a given input matrix, `x`. Then check the speed of the two functions, as you did in Q1.
-
-
-# Parallelization
-
-We will now turn our attention to the statistical concept of
-[bootstrapping](https://en.wikipedia.org/wiki/Bootstrapping_(statistics)). Among its many uses, non-parametric bootstrapping allows us to obtain confidence intervals for parameter estimates without relying on parametric assumptions. Don't worry if these concepts are unfamiliar, we only care about the computation methods in this lab, not the statistics.
-
-The main assumption is that we can approximate the results of many repeated experiments by resampling observations from our original dataset, which reflects the population. 
-
-## Question 3
-
-This function implements a serial version of the bootstrap. Edit this function to parallelize the `lapply` loop, using whichever method you prefer. Rather than specifying the number of cores to use, use the number given by the `ncpus` argument, so that we can test it with different numbers of cores later.
-
-```{r p3-boot-fun, eval = FALSE}
-my_boot <- function(dat, stat, R, ncpus = 1L) {
-  
-  # Getting the random indices
-  n <- nrow(dat)
-  idx <- matrix(sample.int(n, n*R, TRUE), nrow=n, ncol=R)
-  
-  # THIS FUNCTION NEEDS TO BE PARALELLIZED
-  # EDIT THIS CODE:
-  ans <- lapply(seq_len(R), function(i) {
-    stat(dat[idx[,i], , drop=FALSE])
-  })
-  
-  # Converting the list into a matrix
-  ans <- do.call(rbind, ans)
-
-  return(ans)
-}
+# Initialize a temporary in memory database
+con <- dbConnect(SQLite(), ":memory:")
 ```
 
 
-## Question 4
 
-Once you have a version of the `my_boot()` function that runs on multiple cores, check that it provides accurate results by comparing it to a parametric model:
+```{r}
+# install.packages(c("RSQLite", "DBI"))
 
-```{r p3-test-boot, eval = FALSE}
-# Bootstrap of an OLS
-my_stat <- function(d) coef(lm(y ~ x, data=d))
+library(RSQLite)
+library(DBI)
 
-# simulate data
-set.seed(1)
-n <- 500; R <- 1e4
+# Initialize a temporary in memory database
+con <- dbConnect(SQLite(), ":memory:")
 
-x <- cbind(rnorm(n)); y <- x*5 + rnorm(n)
+# Download tables
+actor <- read.csv("https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/actor.csv")
+rental <- read.csv("https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/rental.csv")
+customer <- read.csv("https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/customer.csv")
+payment <- read.csv("https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/payment_p2007_01.csv")
 
-# checking if we get something similar to lm()
-ans0 <- confint(lm(y~x))
-ans1 <- my_boot(dat = data.frame(x, y), my_stat, R = R, ncpus = 2L)
-
-# you should get something like this
-t(apply(ans1, 2, quantile, c(.025,.975)))
-##                   2.5%      97.5%
-## (Intercept) -0.1372435 0.05074397
-## x            4.8680977 5.04539763
-ans0
-##                  2.5 %     97.5 %
-## (Intercept) -0.1379033 0.04797344
-## x            4.8650100 5.04883353
+# Copy data.frames to database
+dbWriteTable(con, "actor", actor)
+dbWriteTable(con, "rental", rental)
+dbWriteTable(con, "customer", customer)
+dbWriteTable(con, "payment", payment)
 ```
 
-## Question 5
-
-Check whether your version actually goes faster when it's run on multiple cores (since this might take a little while to run, we'll use `system.time` and just run each version once, rather than `microbenchmark`, which would run each version 100 times, by default):
-
-```{r benchmark-problem3, eval = FALSE}
-system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 1L))
-system.time(my_boot(dat = data.frame(x, y), my_stat, R = 4000, ncpus = 2L))
+```{r}
+dbListTables(con)
 ```
 
+TIP: You can use the following QUERY to see the structure of a table
+
+```{sql, connection=con}
+PRAGMA table_info(actor)
+```
+
+SQL references:
+
+[https://www.w3schools.com/sql/](https://www.w3schools.com/sql/)
+
+# Exercise 1
+
+Edit the code below to retrieve the actor ID, first name and last name for all actors using the `actor` table. Sort by last name and then by first name (note that the code chunk below is set up to run SQL code rather than R code).
+
+```{sql, connection=con}
+SELECT
+FROM
+ORDER by
+```
+
+# Exercise 2
+
+Retrieve the actor ID, first name, and last name for actors whose last name equals 'WILLIAMS' or 'DAVIS'.
+
+```{sql, connection=con}
+SELECT 
+FROM 
+WHERE ___ IN ('WILLIAMS', 'DAVIS')
+```
+
+# Exercise 3
+
+Write a query against the `rental` table that returns the IDs of the customers who rented a film on July 5, 2005 (use the rental.rental_date column, and you can use the `date()` function to ignore the time component). Include a single row for each distinct customer ID. 
+
+```{sql, connection=con}
+SELECT DISTINCT 
+FROM 
+WHERE date(___) = '2005-07-05'
+```
+
+# Exercise 4
+
+## Exercise 4.1
+
+Construct a query that retrieves all rows from the `payment` table where the amount is either 1.99, 7.99, 9.99.
+
+```{sql, connection=con}
+SELECT *
+FROM ___
+WHERE ___ IN (1.99, 7.99, 9.99)
+```
+
+## Exercise 4.2
+
+Construct a query that retrieves all rows from the `payment` table where the amount is greater then 5.
+
+```{sql, connection=con}
+SELECT *
+FROM 
+WHERE 
+```
+
+## Exercise 4.2
+
+Construct a query that retrieves all rows from the `payment` table where the amount is greater then 5 and less then 8.
+
+```{sql, connection=con}
+SELECT *
+FROM ___
+WHERE ___ AND ___
+```
+
+# Exercise 5
+
+Retrieve all the payment IDs and their amounts from the customers whose last name is 'DAVIS'.
+
+```{sql, connection=con}
+SELECT 
+FROM 
+  INNER JOIN 
+WHERE 
+AND 
+```
+
+# Exercise 6
+
+## Exercise 6.1
+
+Use `COUNT(*)` to count the number of rows in `rental`.
+
+```{sql, connection=con}
+
+```
+
+## Exercise 6.2
+
+Use `COUNT(*)` and `GROUP BY` to count the number of rentals for each `customer_id`.
+
+```{sql, connection=con}
+
+```
+
+## Exercise 6.3
+
+Repeat the previous query and sort by the count in descending order.
+
+```{sql, connection=con}
+
+```
+
+## Exercise 6.4
+
+Repeat the previous query but use `HAVING` to only keep the groups with 40 or more.
+
+```{sql, connection=con}
+
+```
+
+# Exercise 7
+
+Write a query that calculates a number of summary statistics for the payment table using `MAX`, `MIN`, `AVG` and `SUM`
+
+```{sql, connection=con}
+
+```
+
+## Exercise 7.1
+
+Modify the above query to do those calculations for each `customer_id`.
+
+```{sql, connection=con}
+
+```
+
+## Exercise 7.2
+
+Modify the above query to only keep the `customer_id`s that have more then 5 payments.
+
+```{sql, connection=con}
+
+```
+
+# Cleanup
+
+Run the following chunk to disconnect from the connection.
+
+```{r}
+# clean up
+dbDisconnect(con)
+```
