added hw4 and week 11 slides

--- a/slides/week09.qmd
+++ b/slides/week09.qmd
@@ -612,6 +612,7 @@ unique(chs_individual$townname)
 
 ```{r}
 # Set up the dataset
+library(RSQLite)
 con <- dbConnect(SQLite(), ":memory:")
 dbWriteTable(con, "regional", chs_regional)
 dbWriteTable(con, "individual", chs_individual)
