--- a/assignments/hw4.qmd
+++ b/assignments/hw4.qmd
@@ -8,7 +8,7 @@ toc: false
 
 This assignment is due by 11:59pm Pacific Time on Friday, November 21st, 2025.
 
-The learning objectives are to write faster code for computational task
+The learning objectives are to write faster code for a computational task
 requiring a loop and to implement some queries and basic data wrangling in SQL.
 
 ## HPC
@@ -18,6 +18,9 @@ requiring a loop and to implement some queries and basic data wrangling in SQL.
 Rewrite the following R functions to make them faster. It is OK (and
 recommended) to take a look at StackOverflow and Google.
 
+ - `fun1`: Find the total for each row of a numeric matrix. Output should be a vector with length equal to the number of rows of the input matrix.
+ - `fun2`: Calculate the running (cumulative) total along each row of a numeric matrix. Output should be a matrix with dimensions equal to the input matrix.
+ 
 ```{r, eval = FALSE}
 # Total for each row
 fun1 <- function(mat) {
@@ -126,7 +129,7 @@ system.time({
 
 ## SQL
 
-Setup a temporary database by running the following code chunk:
+Setup a temporary database of movie data by running the following code chunk:
 
 ```{r, eval = FALSE}
 # install.packages(c("RSQLite", "DBI"))
@@ -150,7 +153,7 @@ dbWriteTable(con, "category", category)
 
 When you write a new chunk, remember to replace the `r` with `sql,
 connection=con`. Some of these questions will require you to use an inner join.
-Read more about them here https://www.w3schools.com/sql/sql_join_inner.asp
+Read more about them here [https://www.w3schools.com/sql/sql_join_inner.asp](https://www.w3schools.com/sql/sql_join_inner.asp)
 
 ## Question 3 (10 points)
 
